=== 2.9.5

* Export a Maya ASCII scene instead of a MEL script

=== 2.9.4

* Add MatchMover RZML import support
* Export Boujou trackers starting at frame 0, not at frame 1

=== 2.9.3

* Add export for AE null layers as a .jsx script

=== 2.9.2

* In the Maya locator export, do not advance the timebar when creating trackers. Refreshing all these viewports is SLOW.

=== 2.9.1

* Adds an export module for Maya locators on an image plane

=== 2.9

* Tracker objects now use a Hash as internal storage model instead of being an Array delegate.
  Note that due to that some stuff might have become broken since behavior differs in subtle ways.
* Adds a Ruby export format which exports a file you can play with in Ruby, with literal values
* Make test runs architecture-resilient by hardcoding floats
* Adds Tracker#to_ruby for people who like that sort of thing

=== 2.8.6

* Ensure the Flame cornerpin export module always exports points in the proper Z-order

=== 2.8.5

* Add Pad and Crop middlewares for fixing botched telecine and anamorphic Alexa

=== 2.8.2

* Fix release gemspec

=== 2.8.2

* Dramatically improve the update speed by not shipping the test cases with the gem anymore
* Fix obuf for ruby 1.8x

=== 2.8.1

* Fix the bug that MatchMover importer would always assume the sequence starting on frame 1
* Fix the bug that Lint middleware would raise when the export was started from negative frame offsets

=== 2.8.0

* Add a special exporter for Flame cornerpins. Apparently the bilinear staiblizer wants the trackers to have the right names
  right from the start (top_left, top_right and so on)
* Check trackers sent through to ensure that they always come sequentially without violating the frame ordering

=== 2.7.0

* Speedup Shake script parsing by using a buffering reader

=== 2.6.4

* Use various external dependencies that we extracted
* Note that Nuke now supports import and export of camera tracker features!

=== 2.6.3
