@@ -101,6 +101,7 @@ end
   simple_export
   uv_coordinates
   buffering_reader
+  parameters
 ).each do | submodule |
   require File.join(Tracksperanto::PATH, "tracksperanto", submodule)
 end
